# rp1

./: .gitignore  .goreleaser.yml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  DEVELOPMENT.md  EXAMPLES.md  Justfile  LICENSE  README.md  index.html  lefthook.yml  lighthouserc.json  mkdocs.yml  release-please-config.json  sitemap.xml
.claude-plugin/: marketplace.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: docs-feedback.yml
.github/ISSUE_TEMPLATE/: docs-improvement.yml
.github/workflows/: ci.yml  docs.yml  goreleaser.yml  lighthouse.yml  npm-publish.yml  pr-title.yml  release-please.yml
.rp1/context/: architecture.md  charter.md  concept_map.md  dependencies.md  index.md  modules.md  patterns.md  state.json
apps/web-ui/: index.html  package.json  tsconfig.json  vite.config.ts
assets/: ascii-logo.txt
cli/: biome.json  bunfig.toml  package.json  tsconfig.json
cli/scripts/: build-opencode.ts  generate-asset-imports.ts  postinstall.js  postinstall.ts
cli/shared/: config.ts  errors.ts  fp.ts  index.ts  logger.ts  prompts.ts  runtime.ts  spinner.ts
cli/src/: main.ts  router.ts
cli/web-ui/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
concepts/: index.html
concepts/command-agent-pattern/: index.html
concepts/constitutional-prompting/: index.html
concepts/knowledge-aware-agents/: index.html
concepts/map-reduce-workflows/: index.html
docs/: _redirects  hooks.py  index.md  robots.txt
docs/assets/: logo-square.pxd
docs/comparison/: vs-raw-prompting.md
docs/concepts/: builder-reviewer-agents.md  command-agent-pattern.md  constitutional-prompting.md  index.md  knowledge-aware-agents.md  map-reduce-workflows.md  parallel-worktrees.md  skills.md  stateless-agents.md
docs/getting-started/: claude-code.md  first-workflow.md  index.md  installation.md  opencode.md  platforms.md  quickstart.md  rp1-directory.md
docs/guides/: bootstrap.md  bug-investigation.md  ci-cd-integration.md  feature-development.md  index.md  kb-loading-patterns.md  parallel-development.md  pr-feedback.md  pr-review.md  scaling-with-teams.md  team-onboarding.md
docs/javascripts/: analytics.js
docs/opencode/: comparison.md  migration.md  troubleshooting.md
docs/overrides/: main.html
docs/reference/: dag-format.md  index.md  repository-structure.md
docs/stylesheets/: extra.css
docs/troubleshooting/: index.md
getting-started/: index.html
getting-started/claude-code/: index.html
guides/: index.html
reference/: index.html
scripts/: build.sh  clean-dev-plugins.sh  clean-opencode-rp1.sh  install-for-opencode.sh  install-opencode-local.sh  install.sh  migrate-arguments.sh  smoke-test.sh  update-readme-badge.sh  update-version.sh  validate-migration.sh
search/: search_index.json
stylesheets/: extra.css
tools/install/: .gitignore  README.md  pyproject.toml
tools/install/src/rp1_opencode/: __init__.py  cli.py  config.py  installer.py  manifest.py  models.py  prerequisites.py  verifier.py
tools/install/src/rp1_opencode/assets/: logo.txt
tools/install/tests/: __init__.py  test_config.py  test_installer.py  test_manifest.py  test_prerequisites.py  test_verifier.py
(+404 files in other folders)
